# dataverse-toolkit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  IMPLEMENTATION.md  README.md  UPGRADING.md  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  usage.html
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  modules.doctree  quickstart.doctree  usage.doctree
.doctrees/api/: exceptions.doctree  index.doctree  models.doctree  search.doctree  server.doctree
.github/workflows/: sphinx.yaml
_modules/: index.html
_modules/dartfx/dataverse/: dataverse.html
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  quickstart.rst.txt  usage.rst.txt
_sources/api/: exceptions.rst.txt  models.rst.txt  search.rst.txt  server.rst.txt
api/: exceptions.html  index.html  models.html  search.html  server.html
docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  modules.rst  quickstart.rst  usage.rst
docs/source/api/: exceptions.rst  index.rst  models.rst  search.rst  server.rst
src/dartfx/dataverse/: __init__.py  cli.py  dataverse.py
tests/: conftest.py  test_dataset.py  test_info.py  test_metadatablocks.py  test_search.py  test_server_installations.py
